# Raytracer

./: .gitignore  .releaserc  AABB_8hpp.html  AABB_8hpp.js  AABB_8hpp__dep__incl.map  AABB_8hpp__dep__incl.md5  AABB_8hpp__incl.map  AABB_8hpp__incl.md5  AABB_8hpp_source.html  AInterface_8hpp.html  AInterface_8hpp.js  AInterface_8hpp__dep__incl.map  AInterface_8hpp__dep__incl.md5  AInterface_8hpp__incl.map  AInterface_8hpp__incl.md5  AInterface_8hpp_source.html  AMaterial_8cpp.html  AMaterial_8cpp_source.html  AMaterial_8hpp.html  AMaterial_8hpp.js  AMaterial_8hpp__dep__incl.map  AMaterial_8hpp__dep__incl.md5  AMaterial_8hpp__incl.map  AMaterial_8hpp__incl.md5  AMaterial_8hpp_source.html  APrimitive_8cpp.html  APrimitive_8cpp__incl.map  APrimitive_8cpp__incl.md5  APrimitive_8cpp_source.html  APrimitive_8hpp.html  APrimitive_8hpp.js  APrimitive_8hpp__dep__incl.map  APrimitive_8hpp__dep__incl.md5  APrimitive_8hpp__incl.map  APrimitive_8hpp__incl.md5  APrimitive_8hpp_source.html  APrimtive_8hpp.html  APrimtive_8hpp_source.html  ARenderer_8hpp.html  ARenderer_8hpp.js  (+1881 more)
.github/workflows/: ci.yml  mirroring.yml  publisher.yml  receiver.yml  release.yml
config/: example.cfg  scene_01_classic.cfg  scene_02_sunset_desert.cfg  scene_03_deep_space.cfg  scene_04_neon_cyberpunk.cfg  scene_05_snowy_mountain.cfg  scene_06_lava_world.cfg  scene_07_underwater.cfg  scene_08_billiard.cfg  scene_09_foggy_mist.cfg  scene_10_rainbow_corridor.cfg  scene_11_golden_hour.cfg  scene_12_atom_model.cfg  scene_13_minimalist_bw.cfg  scene_14_alien_jungle.cfg  scene_15_ice_cave.cfg  scene_16_cylinder_temple.cfg  scene_17_neon_pipes.cfg  scene_18_stonehenge_ring.cfg  scene_19_robot_factory.cfg  scene_20_candy_land.cfg  scene_21_500_spheres.cfg  scene_22_cone_circus.cfg  scene_23_volcanic_spires.cfg  scene_??_surprise.cfg  sphere_plane.cfg
dev/: COMMITLINT.md  setup-commitlint.sh
docs/: abstracts.dox  doxygen_dirs.dox  geometry.dox  interfaces.dox  lights.dox  main.dox  materials.dox  plugin-system.dox  primitives.dox  renderer.dox  scene-system.dox  space-partitioning.dox  utils.dox
docs/docs/html/: graph_legend.html  navtreedata.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_f.js  defines_0.js  files_0.js  (+66 more)
src/: main.cpp
src/CorePlugin/: CorePlugin.cpp  CorePlugin.hpp
src/CorePlugin/Interfaces/SceneWriter/: SceneWriter.cpp  SceneWriter.hpp
src/CorePlugin/Lights/AmbientLight/: AmbientLight.hpp
src/CorePlugin/Lights/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.hpp
src/CorePlugin/Lights/PointLight/: PointLight.hpp
src/CorePlugin/Materials/: FlatColor.hpp
src/CorePlugin/Materials/Lambertian/: Lambertian.cpp  Lambertian.hpp
src/CorePlugin/Primitives/Cylinder/: Cylinder.hpp
src/CorePlugin/Primitives/Plane/: Plane.cpp  Plane.hpp
src/CorePlugin/Renderers/Camera/: Camera.cpp  Camera.hpp
src/Exception/: RaytracerException.hpp
src/Exceptions/DivisionByZeroException/: DivisionByZeroException.hpp
src/Exceptions/ParsingException/: ParsingException.hpp
src/Exceptions/RaytracerException/: RaytracerException.cpp
src/Geometry/AABB/: AABB.hpp
src/Geometry/HitRecord/: HitRecord.hpp
src/Geometry/Matrix/: Matrix.hpp
src/Geometry/Point3D/: Point3D.cpp  Point3D.hpp
src/Geometry/Ray/: Ray.cpp  Ray.hpp
src/Geometry/Rectangle3D/: Rectangle3D.cpp  Rectangle3D.hpp
src/Geometry/TransformMatrix/: TransformMatrix.cpp  TransformMatrix.hpp
src/Geometry/Vector3D/: Vector3D.cpp  Vector3D.hpp
src/Objects/: IPlugin.hpp  Plugin.hpp
src/Objects/Abstract/AMaterial/: AMaterial.hpp
src/Objects/Abstract/APrimitive/: APrimitive.cpp  APrimitive.hpp
src/Objects/Abstracts/: ILight.hpp  IMaterial.hpp
src/Objects/Abstracts/AInterface/: AInterface.hpp
src/Objects/Abstracts/AMaterial/: AMaterial.hpp
src/Objects/Abstracts/APrimitive/: APrimitive.cpp  APrimitive.hpp
src/Objects/Abstracts/ARenderer/: ARenderer.hpp
src/Objects/Interface/: ILight.hpp  IMaterial.hpp  IPrimitive.hpp
src/Objects/Plugins/BVHCamPlugin/: BVHCamPlugin.cpp
src/Objects/Plugins/BVHCamPlugin/Renderers/: BVHCam.cpp  BVHCam.hpp
src/Objects/Plugins/CorePlugin/: CorePlugin.cpp  CorePlugin.hpp
src/Objects/Plugins/CorePlugin/Interfaces/SceneWriter/: SceneWriter.cpp  SceneWriter.hpp
src/Objects/Plugins/CorePlugin/Lights/AmbientLight/: AmbientLight.cpp  (+1 more)
src/Objects/Plugins/Interfaces/SceneWriter/: SceneWriter.cpp  SceneWriter.hpp
src/Objects/Plugins/LivescenePlugin/: LivescenePlugin.cpp
src/Objects/Plugins/Materials/: FlatColor.hpp
src/Objects/Plugins/Primitives/Plane/: Plane.hpp
src/Objects/Plugins/Renderers/Camera/: Camera.cpp  Camera.hpp
src/Objects/Primitives/Plane/: Plane.cpp  Plane.hpp
src/PluginManager/: PluginManager.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/SceneSystem/BVH/: BVH.hpp
src/SceneSystem/Camera/: Camera.cpp  Camera.hpp
src/SceneSystem/ConfigParser/: Parser.cpp  Parser.hpp  README.md
src/SceneSystem/PluginManager/: PluginManager.cpp  PluginManager.hpp
src/SceneSystem/Scene/: Scene.cpp  Scene.hpp
src/SceneSystem/SceneLoader/: SceneLoader.cpp  SceneLoader.hpp
src/SceneSystem/SceneNodeHelpers/: SceneNodeHelpers.hpp
src/Utils/: Color.cpp  Color.hpp  FrameBufferMutex.hpp  Utils.cpp  Utils.hpp
tests/: test.cpp
tests/geometry/: test_AABB.cpp  test_Matrix.cpp  test_Point3D.cpp  test_Rectangle3D.cpp  test_TransformMatrix.cpp  test_Vector3D.cpp
tests/parsing/: test_file.cpp  test_format.cpp  test_values.cpp
tests/parsing/config/: variable_format.cfg  without_right.cfg
tests/scene_system/: test_BVH.cpp  test_scene_system.cpp
tests/scene_system/config/: missing_light.cfg  missing_primitive.cfg  nested_paths.cfg  scene_coverage.cfg
tests/utils/: test_utils.cpp
(+23 files in other folders)
